--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
+            <div class"my-style">
+                    <h3>Preston loves <b>hooping</b>when he's free</h3>
+            </div>>
+
+            </div>
             <div class="my-bio">
                 <h3>Stephanie</h3>
                 <h4>
