--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
             </div>
             <div class="my-bio">
-                <h3>Stephanie</h3>
+                <h3>Franklin Preston</h3>
                 <h4>
-                    <em>Stephanie loves Star Wars. In fact, her favorite character is Ahsoka Tano!</em>
+                    <em>I Star Wars. In fact, her favorite character is Anakin Skywalker!</em>
                 </h4>
             </div>
             <div class="code-ninja-style">
