--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             </div>
             <!-- New HTML content goes here! -->
             <div class"my-style">
-                    <h3>Preston loves <b>hooping</b>when he's free</h3>
+                    <h3>Preston loves <b>hooping </b>when he's free</h3>
             </div>>
 
             </div>
             <div class="my-bio">
                 <h3>Franklin Preston</h3>
                 <h4>
-                    <em>I Star Wars. In fact, her favorite character is Anakin Skywalker!</em>
+                    <em>He enjoy Star Wars. In fact, his favorite character is Anakin Skywalker!</em>
                 </h4>
             </div>
             <div class="code-ninja-style">
